# kinect-ndi-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_dependencies.sh  kinect_ndi_cross_platform.cpp  setup.sh
